<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:text="@string/titleframe"
                android:id="@+id/textView"
                android:background="@color/gred"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_margin="10dp"
                />

            <Button
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:text="@string/textCat"
                android:id="@+id/buttonCat"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="#ffffffff" />


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textThing1"
                    android:id="@+id/buttonThing1"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/buttonshape"
                    android:layout_margin="10dp"
                    android:textAllCaps="false"
                    android:textColor="#ffffffff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textThing2"
                    android:id="@+id/buttonThing2"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/buttonshape"
                    android:layout_margin="10dp"
                    android:textAllCaps="false"
                    android:textColor="#ffffffff" />
            </LinearLayout>

            <Button
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:text="@string/textThing3"
                android:id="@+id/buttonThingamajigger"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonshape"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="#ffffffff" />
            <Button
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:text="@string/textSally"
                android:id="@+id/buttonSally"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonshape"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="#ffffffff" />
            <Button
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:text="@string/textNick"
                android:id="@+id/buttonNick"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonshape"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="#ffffffff" />

            <Button
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:text="@string/textSeuss"
                android:id="@+id/buttonSeuss"
                android:layout_gravity="center_horizontal"
                android:background="@color/red"
                android:radius="14dp"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="#ffffffff" />

        </LinearLayout>



    </ScrollView>
</FrameLayout>
